--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,7 +76,12 @@
         "set": "cpp",
         "cinttypes": "cpp",
         "cstring": "cpp",
-        "bit": "cpp"
+        "bit": "cpp",
+        "chrono": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "ratio": "cpp",
+        "numbers": "cpp"
     },
     "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 0}",
     "C_Cpp.clang_format_style": "{ BasedOnStyle: Google, IndentWidth: 4, ColumnLimit: 0}",
